# Nora-Data-PipeLine

./: .gitignore  Dockerfile  README.md  pyproject.toml
pipeline/: app.py  data_log.py  database.py  deliver_data.py  fetch_data.py  get_update_offset.py  model.py  transform_data.py
