[tool.poetry]
name = "datapipeline"
version = "0.1.0"
description = ""
authors = ["Shihan Cheng <shihan.cheng@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.26"
requests = "^2.26.0"
psycopg2-binary = "^2.9.2"
boto3 = "^1.20.6"


[tool.poetry.group.dev.dependencies]
mypy = "^0.910"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
